--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -19,14 +19,336 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import os\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "from wordcloud import WordCloud\n",
+    "\n",
+    "import xgboost as xgb\n",
+    "from textblob import TextBlob\n",
+    "\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = os.path.join('..', 'datasets', 'archive')\n",
+    "\n",
+    "comments = pd.read_csv(\n",
+    "    os.path.join(dataset_path, 'UScomments.csv'),\n",
+    "    on_bad_lines='skip',\n",
+    "    encoding='utf-8',\n",
+    "    low_memory=False\n",
+    ")\n",
+    "videos = pd.read_csv(\n",
+    "    os.path.join(dataset_path, 'USvideos.csv'), \n",
+    "    on_bad_lines='skip', \n",
+    "    encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>comment_text</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>replies</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>Logan Paul it's yo big day ‼️‼️‼️</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>I've been following you from the start of your...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>Say hi to Kong and maverick for me</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>MY FAN . attendance</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>trending 😉</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id                                       comment_text likes  \\\n",
+       "0  XpVt6Z1Gjjo                  Logan Paul it's yo big day ‼️‼️‼️     4   \n",
+       "1  XpVt6Z1Gjjo  I've been following you from the start of your...     3   \n",
+       "2  XpVt6Z1Gjjo                 Say hi to Kong and maverick for me     3   \n",
+       "3  XpVt6Z1Gjjo                                MY FAN . attendance     3   \n",
+       "4  XpVt6Z1Gjjo                                         trending 😉     3   \n",
+       "\n",
+       "  replies  \n",
+       "0       0  \n",
+       "1       0  \n",
+       "2       0  \n",
+       "3       0  \n",
+       "4       0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>channel_title</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>views</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>dislikes</th>\n",
+       "      <th>comment_total</th>\n",
+       "      <th>thumbnail_link</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>1 YEAR OF VLOGGING -- HOW LOGAN PAUL CHANGED Y...</td>\n",
+       "      <td>Logan Paul Vlogs</td>\n",
+       "      <td>24</td>\n",
+       "      <td>logan paul vlog|logan paul|logan|paul|olympics...</td>\n",
+       "      <td>4394029</td>\n",
+       "      <td>320053</td>\n",
+       "      <td>5931</td>\n",
+       "      <td>46245</td>\n",
+       "      <td>https://i.ytimg.com/vi/XpVt6Z1Gjjo/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K4wEI5zhHB0</td>\n",
+       "      <td>iPhone X — Introducing iPhone X — Apple</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Apple|iPhone 10|iPhone Ten|iPhone|Portrait Lig...</td>\n",
+       "      <td>7860119</td>\n",
+       "      <td>185853</td>\n",
+       "      <td>26679</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://i.ytimg.com/vi/K4wEI5zhHB0/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cLdxuaxaQwc</td>\n",
+       "      <td>My Response</td>\n",
+       "      <td>PewDiePie</td>\n",
+       "      <td>22</td>\n",
+       "      <td>[none]</td>\n",
+       "      <td>5845909</td>\n",
+       "      <td>576597</td>\n",
+       "      <td>39774</td>\n",
+       "      <td>170708</td>\n",
+       "      <td>https://i.ytimg.com/vi/cLdxuaxaQwc/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WYYvHb03Eog</td>\n",
+       "      <td>Apple iPhone X first look</td>\n",
+       "      <td>The Verge</td>\n",
+       "      <td>28</td>\n",
+       "      <td>apple iphone x hands on|Apple iPhone X|iPhone ...</td>\n",
+       "      <td>2642103</td>\n",
+       "      <td>24975</td>\n",
+       "      <td>4542</td>\n",
+       "      <td>12829</td>\n",
+       "      <td>https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sjlHnJvXdQs</td>\n",
+       "      <td>iPhone X (parody)</td>\n",
+       "      <td>jacksfilms</td>\n",
+       "      <td>23</td>\n",
+       "      <td>jacksfilms|parody|parodies|iphone|iphone x|iph...</td>\n",
+       "      <td>1168130</td>\n",
+       "      <td>96666</td>\n",
+       "      <td>568</td>\n",
+       "      <td>6666</td>\n",
+       "      <td>https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id                                              title  \\\n",
+       "0  XpVt6Z1Gjjo  1 YEAR OF VLOGGING -- HOW LOGAN PAUL CHANGED Y...   \n",
+       "1  K4wEI5zhHB0            iPhone X — Introducing iPhone X — Apple   \n",
+       "2  cLdxuaxaQwc                                        My Response   \n",
+       "3  WYYvHb03Eog                          Apple iPhone X first look   \n",
+       "4  sjlHnJvXdQs                                  iPhone X (parody)   \n",
+       "\n",
+       "      channel_title  category_id  \\\n",
+       "0  Logan Paul Vlogs           24   \n",
+       "1             Apple           28   \n",
+       "2         PewDiePie           22   \n",
+       "3         The Verge           28   \n",
+       "4        jacksfilms           23   \n",
+       "\n",
+       "                                                tags    views   likes  \\\n",
+       "0  logan paul vlog|logan paul|logan|paul|olympics...  4394029  320053   \n",
+       "1  Apple|iPhone 10|iPhone Ten|iPhone|Portrait Lig...  7860119  185853   \n",
+       "2                                             [none]  5845909  576597   \n",
+       "3  apple iphone x hands on|Apple iPhone X|iPhone ...  2642103   24975   \n",
+       "4  jacksfilms|parody|parodies|iphone|iphone x|iph...  1168130   96666   \n",
+       "\n",
+       "   dislikes  comment_total                                  thumbnail_link  \\\n",
+       "0      5931          46245  https://i.ytimg.com/vi/XpVt6Z1Gjjo/default.jpg   \n",
+       "1     26679              0  https://i.ytimg.com/vi/K4wEI5zhHB0/default.jpg   \n",
+       "2     39774         170708  https://i.ytimg.com/vi/cLdxuaxaQwc/default.jpg   \n",
+       "3      4542          12829  https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg   \n",
+       "4       568           6666  https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg   \n",
+       "\n",
+       "    date  \n",
+       "0  13.09  \n",
+       "1  13.09  \n",
+       "2  13.09  \n",
+       "3  13.09  \n",
+       "4  13.09  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "videos.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "sentiment_venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
