--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -19,8 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Importing and loading"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +35,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import re\n",
     "import os\n",
     "\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -166,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -274,6 +282,433 @@
        "      <td>https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg</td>\n",
        "      <td>13.09</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>cMKX2tE5Luk</td>\n",
+       "      <td>The Disaster Artist | Official Trailer HD | A24</td>\n",
+       "      <td>A24</td>\n",
+       "      <td>1</td>\n",
+       "      <td>a24|a24 films|a24 trailers|independent films|t...</td>\n",
+       "      <td>1311445</td>\n",
+       "      <td>34507</td>\n",
+       "      <td>544</td>\n",
+       "      <td>3040</td>\n",
+       "      <td>https://i.ytimg.com/vi/cMKX2tE5Luk/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>8wNr-NQImFg</td>\n",
+       "      <td>The Check In: HUD, Ben Carson and Hurricanes</td>\n",
+       "      <td>Late Night with Seth Meyers</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Late night|Seth Meyers|check in|hud|Ben Carson...</td>\n",
+       "      <td>666169</td>\n",
+       "      <td>9985</td>\n",
+       "      <td>297</td>\n",
+       "      <td>1071</td>\n",
+       "      <td>https://i.ytimg.com/vi/8wNr-NQImFg/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>_HTXMhKWqnA</td>\n",
+       "      <td>iPhone X Impressions &amp; Hands On!</td>\n",
+       "      <td>Marques Brownlee</td>\n",
+       "      <td>28</td>\n",
+       "      <td>iPhone X|iphone x|iphone 10|iPhone X impressio...</td>\n",
+       "      <td>1728614</td>\n",
+       "      <td>74062</td>\n",
+       "      <td>2180</td>\n",
+       "      <td>15297</td>\n",
+       "      <td>https://i.ytimg.com/vi/_HTXMhKWqnA/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>_ANP3HR1jsM</td>\n",
+       "      <td>ATTACKED BY A POLICE DOG!!</td>\n",
+       "      <td>RomanAtwoodVlogs</td>\n",
+       "      <td>22</td>\n",
+       "      <td>Roman Atwood|Roman|Atwood|roman atwood vlogs|f...</td>\n",
+       "      <td>1338533</td>\n",
+       "      <td>69687</td>\n",
+       "      <td>678</td>\n",
+       "      <td>5643</td>\n",
+       "      <td>https://i.ytimg.com/vi/_ANP3HR1jsM/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>zgLtEob6X-Q</td>\n",
+       "      <td>Honest Trailers - The Mummy (2017)</td>\n",
+       "      <td>Screen Junkies</td>\n",
+       "      <td>1</td>\n",
+       "      <td>screenjunkies|screen junkies|screenjunkies new...</td>\n",
+       "      <td>1056891</td>\n",
+       "      <td>29943</td>\n",
+       "      <td>878</td>\n",
+       "      <td>4046</td>\n",
+       "      <td>https://i.ytimg.com/vi/zgLtEob6X-Q/default.jpg</td>\n",
+       "      <td>13.09</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id                                              title  \\\n",
+       "0  XpVt6Z1Gjjo  1 YEAR OF VLOGGING -- HOW LOGAN PAUL CHANGED Y...   \n",
+       "1  K4wEI5zhHB0            iPhone X — Introducing iPhone X — Apple   \n",
+       "2  cLdxuaxaQwc                                        My Response   \n",
+       "3  WYYvHb03Eog                          Apple iPhone X first look   \n",
+       "4  sjlHnJvXdQs                                  iPhone X (parody)   \n",
+       "5  cMKX2tE5Luk    The Disaster Artist | Official Trailer HD | A24   \n",
+       "6  8wNr-NQImFg       The Check In: HUD, Ben Carson and Hurricanes   \n",
+       "7  _HTXMhKWqnA                   iPhone X Impressions & Hands On!   \n",
+       "8  _ANP3HR1jsM                         ATTACKED BY A POLICE DOG!!   \n",
+       "9  zgLtEob6X-Q                 Honest Trailers - The Mummy (2017)   \n",
+       "\n",
+       "                 channel_title  category_id  \\\n",
+       "0             Logan Paul Vlogs           24   \n",
+       "1                        Apple           28   \n",
+       "2                    PewDiePie           22   \n",
+       "3                    The Verge           28   \n",
+       "4                   jacksfilms           23   \n",
+       "5                          A24            1   \n",
+       "6  Late Night with Seth Meyers           23   \n",
+       "7             Marques Brownlee           28   \n",
+       "8             RomanAtwoodVlogs           22   \n",
+       "9               Screen Junkies            1   \n",
+       "\n",
+       "                                                tags    views   likes  \\\n",
+       "0  logan paul vlog|logan paul|logan|paul|olympics...  4394029  320053   \n",
+       "1  Apple|iPhone 10|iPhone Ten|iPhone|Portrait Lig...  7860119  185853   \n",
+       "2                                             [none]  5845909  576597   \n",
+       "3  apple iphone x hands on|Apple iPhone X|iPhone ...  2642103   24975   \n",
+       "4  jacksfilms|parody|parodies|iphone|iphone x|iph...  1168130   96666   \n",
+       "5  a24|a24 films|a24 trailers|independent films|t...  1311445   34507   \n",
+       "6  Late night|Seth Meyers|check in|hud|Ben Carson...   666169    9985   \n",
+       "7  iPhone X|iphone x|iphone 10|iPhone X impressio...  1728614   74062   \n",
+       "8  Roman Atwood|Roman|Atwood|roman atwood vlogs|f...  1338533   69687   \n",
+       "9  screenjunkies|screen junkies|screenjunkies new...  1056891   29943   \n",
+       "\n",
+       "   dislikes  comment_total                                  thumbnail_link  \\\n",
+       "0      5931          46245  https://i.ytimg.com/vi/XpVt6Z1Gjjo/default.jpg   \n",
+       "1     26679              0  https://i.ytimg.com/vi/K4wEI5zhHB0/default.jpg   \n",
+       "2     39774         170708  https://i.ytimg.com/vi/cLdxuaxaQwc/default.jpg   \n",
+       "3      4542          12829  https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg   \n",
+       "4       568           6666  https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg   \n",
+       "5       544           3040  https://i.ytimg.com/vi/cMKX2tE5Luk/default.jpg   \n",
+       "6       297           1071  https://i.ytimg.com/vi/8wNr-NQImFg/default.jpg   \n",
+       "7      2180          15297  https://i.ytimg.com/vi/_HTXMhKWqnA/default.jpg   \n",
+       "8       678           5643  https://i.ytimg.com/vi/_ANP3HR1jsM/default.jpg   \n",
+       "9       878           4046  https://i.ytimg.com/vi/zgLtEob6X-Q/default.jpg   \n",
+       "\n",
+       "    date  \n",
+       "0  13.09  \n",
+       "1  13.09  \n",
+       "2  13.09  \n",
+       "3  13.09  \n",
+       "4  13.09  \n",
+       "5  13.09  \n",
+       "6  13.09  \n",
+       "7  13.09  \n",
+       "8  13.09  \n",
+       "9  13.09  "
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "videos.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comments"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/betaknight/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/betaknight/nltk_data...\n",
+      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('punkt')\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    text = text.lower()\n",
+    "    text = re.sub(r\"http\\S+\", \"\", text)\n",
+    "    text = re.sub(r\"[^a-z\\s]\", \"\", text)\n",
+    "    tokens = word_tokenize(text)\n",
+    "    tokens = [word for word in tokens if word not in stop_words]\n",
+    "    return \" \".join(tokens)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This function prepares text for analysis by cleaning and simplifying it. First, it downloads necessary language tools that help break text into words and remove common words that do not carry meaning. A list of common English words like \"the\", \"is\", and \"and\" is stored so they can be filtered out.\n",
+    "\n",
+    "When the function is used on a comment:\n",
+    "1. The entire comment is changed to lowercase so that words like \"Logan\" and \"logan\" are treated the same.\n",
+    "2. Any links starting with \"http\" are removed from the comment.\n",
+    "3. All characters that are not letters or spaces are removed, including punctuation and numbers.\n",
+    "4. The remaining words are split into a list.\n",
+    "5. Each word is checked, and any word that is too common or not useful for analysis is removed.\n",
+    "6. The cleaned words are combined back into one string for further analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>replies</th>\n",
+       "      <th>clean_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>logan paul yo big day</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ive following start vine channel seen vlogs</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>say hi kong maverick</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>fan attendance</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>trending</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      video_id likes replies                                   clean_text\n",
+       "0  XpVt6Z1Gjjo     4       0                        logan paul yo big day\n",
+       "1  XpVt6Z1Gjjo     3       0  ive following start vine channel seen vlogs\n",
+       "2  XpVt6Z1Gjjo     3       0                         say hi kong maverick\n",
+       "3  XpVt6Z1Gjjo     3       0                               fan attendance\n",
+       "4  XpVt6Z1Gjjo     3       0                                     trending"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments['clean_text'] = comments['comment_text'].astype(str).apply(clean_text)\n",
+    "comments = comments.drop(columns=['comment_text'])\n",
+    "\n",
+    "comments.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Videos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "videos['like_dislike_ratio'] = videos['likes'] / (videos['likes'] + videos['dislikes'])\n",
+    "videos = videos.drop(columns=['date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>video_id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>channel_title</th>\n",
+       "      <th>category_id</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>views</th>\n",
+       "      <th>likes</th>\n",
+       "      <th>dislikes</th>\n",
+       "      <th>comment_total</th>\n",
+       "      <th>thumbnail_link</th>\n",
+       "      <th>like_dislike_ratio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>XpVt6Z1Gjjo</td>\n",
+       "      <td>1 YEAR OF VLOGGING -- HOW LOGAN PAUL CHANGED Y...</td>\n",
+       "      <td>Logan Paul Vlogs</td>\n",
+       "      <td>24</td>\n",
+       "      <td>logan paul vlog|logan paul|logan|paul|olympics...</td>\n",
+       "      <td>4394029</td>\n",
+       "      <td>320053</td>\n",
+       "      <td>5931</td>\n",
+       "      <td>46245</td>\n",
+       "      <td>https://i.ytimg.com/vi/XpVt6Z1Gjjo/default.jpg</td>\n",
+       "      <td>0.981806</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>K4wEI5zhHB0</td>\n",
+       "      <td>iPhone X — Introducing iPhone X — Apple</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>28</td>\n",
+       "      <td>Apple|iPhone 10|iPhone Ten|iPhone|Portrait Lig...</td>\n",
+       "      <td>7860119</td>\n",
+       "      <td>185853</td>\n",
+       "      <td>26679</td>\n",
+       "      <td>0</td>\n",
+       "      <td>https://i.ytimg.com/vi/K4wEI5zhHB0/default.jpg</td>\n",
+       "      <td>0.874471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cLdxuaxaQwc</td>\n",
+       "      <td>My Response</td>\n",
+       "      <td>PewDiePie</td>\n",
+       "      <td>22</td>\n",
+       "      <td>[none]</td>\n",
+       "      <td>5845909</td>\n",
+       "      <td>576597</td>\n",
+       "      <td>39774</td>\n",
+       "      <td>170708</td>\n",
+       "      <td>https://i.ytimg.com/vi/cLdxuaxaQwc/default.jpg</td>\n",
+       "      <td>0.935471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WYYvHb03Eog</td>\n",
+       "      <td>Apple iPhone X first look</td>\n",
+       "      <td>The Verge</td>\n",
+       "      <td>28</td>\n",
+       "      <td>apple iphone x hands on|Apple iPhone X|iPhone ...</td>\n",
+       "      <td>2642103</td>\n",
+       "      <td>24975</td>\n",
+       "      <td>4542</td>\n",
+       "      <td>12829</td>\n",
+       "      <td>https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg</td>\n",
+       "      <td>0.846123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>sjlHnJvXdQs</td>\n",
+       "      <td>iPhone X (parody)</td>\n",
+       "      <td>jacksfilms</td>\n",
+       "      <td>23</td>\n",
+       "      <td>jacksfilms|parody|parodies|iphone|iphone x|iph...</td>\n",
+       "      <td>1168130</td>\n",
+       "      <td>96666</td>\n",
+       "      <td>568</td>\n",
+       "      <td>6666</td>\n",
+       "      <td>https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg</td>\n",
+       "      <td>0.994158</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -307,15 +742,15 @@
        "3      4542          12829  https://i.ytimg.com/vi/WYYvHb03Eog/default.jpg   \n",
        "4       568           6666  https://i.ytimg.com/vi/sjlHnJvXdQs/default.jpg   \n",
        "\n",
-       "    date  \n",
-       "0  13.09  \n",
-       "1  13.09  \n",
-       "2  13.09  \n",
-       "3  13.09  \n",
-       "4  13.09  "
+       "   like_dislike_ratio  \n",
+       "0            0.981806  \n",
+       "1            0.874471  \n",
+       "2            0.935471  \n",
+       "3            0.846123  \n",
+       "4            0.994158  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
