--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -991,6 +991,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This scatterplot compares two values for each video: the like-to-dislike ratio (along the bottom) and the ratio of positive comments to total comments (along the side). Each dot represents a video.\n",
+    "\n",
+    "The cluster of points near the top right shows that many videos have a high number of likes and a decent number of positive comments. However, there is also a wide spread of comment sentiment for videos with a perfect like/dislike ratio. Some videos with no dislikes still have mostly negative comments, which suggests a possible disconnect between public engagement and the tone of viewer feedback.\n",
+    "\n",
+    "The shape of the scatterplot supports the correlation score of around 0.28. There is a general upward trend, but many exceptions. This indicates that while videos with more likes tend to have more positive comments, this is not always true. Comment sentiment can vary widely even when a video is well-received in terms of likes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {},
@@ -1048,6 +1059,15 @@
    ],
    "source": [
     "cv_combined[['like_dislike_ratio', 'comment_sentiment_ratio']].corr()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The correlation matrix shows how strongly the like-to-dislike ratio is related to the comment sentiment ratio. The value `1.000000` along the diagonal means each variable is perfectly correlated with itself. The off-diagonal value `0.278655` indicates the actual correlation between the two different ratios.\n",
+    "\n",
+    "This correlation score is positive but relatively low, suggesting that there is a weak relationship between how people engage with a video through likes and dislikes and how they express their opinions through comments. In other words, a higher like/dislike ratio does not always mean that the comments will be more positive, and vice versa. This supports the idea that likes and comment tone can often reflect different aspects of viewer behavior."
    ]
   },
   {
