--- a/notebooks/eda_analysis.ipynb
+++ b/notebooks/eda_analysis.ipynb
@@ -1253,7 +1253,7 @@
     "- `comment_sentiment_ratio = 0.0` means that all the comments analyzed were negative.\n",
     "- `ratio_diff = 1.0` shows the absolute difference between the like/dislike ratio and the comment sentiment ratio.\n",
     "\n",
-    "In each of these examples, there is a contradiction between how viewers interact with the video through likes and how they express themselves through comments. These cases are useful for closer analysis because they may reveal sarcasm, controversial content, or limitations in how sentiment was detected."
+    "In each of these examples, there is a contradiction between how viewers interact with the video through likes and how they express themselves through comments. These cases are useful for closer analysis because they may reveal sarcasm, controversial content, or limitations in how sentiment was detected.z"
    ]
   },
   {
