fonz cleaned comments

--- a/notebooks/eda_analysis_fonz.ipynb
+++ b/notebooks/eda_analysis_fonz.ipynb
@@ -2,7 +2,49 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
+   "id": "50fdbce5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting translate\n",
+      "  Downloading translate-3.6.1-py2.py3-none-any.whl.metadata (7.7 kB)\n",
+      "Requirement already satisfied: click in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (8.1.7)\n",
+      "Requirement already satisfied: lxml in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (5.2.1)\n",
+      "Requirement already satisfied: requests in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (2.32.3)\n",
+      "Collecting libretranslatepy==2.1.1 (from translate)\n",
+      "  Downloading libretranslatepy-2.1.1-py3-none-any.whl.metadata (233 bytes)\n",
+      "Requirement already satisfied: colorama in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from click->translate) (0.4.6)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (3.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (2.2.3)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (2024.12.14)\n",
+      "Downloading translate-3.6.1-py2.py3-none-any.whl (12 kB)\n",
+      "Downloading libretranslatepy-2.1.1-py3-none-any.whl (3.2 kB)\n",
+      "Installing collected packages: libretranslatepy, translate\n",
+      "Successfully installed libretranslatepy-2.1.1 translate-3.6.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  WARNING: The script translate-cli.exe is installed in 'c:\\Users\\New Owner\\anaconda3\\Scripts' which is not on PATH.\n",
+      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install translate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "a7d1a7d5",
    "metadata": {},
    "outputs": [],
@@ -11,7 +53,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import nltk\n",
-    "from tqdm.auto import tqdm"
+    "from nltk.corpus import stopwords\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "from tqdm.auto import tqdm\n",
+    "import re"
    ]
   },
   {
@@ -438,14 +483,56 @@
    "id": "10e8253e",
    "metadata": {},
    "source": [
-    "## Word Lemmetizer"
+    "## Text Cleaning"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "41c94b3b",
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a77289aa",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "def clear_text(text):\n",
+    "    text = text.lower() # Convert to lowercase\n",
+    "    pattern = r\"[^a-zA-Z0-9\\s]']\"\n",
+    "    text = re.sub(pattern, \" \", text) # Remove special characters, including punctuation\n",
+    "    text = text.split()\n",
+    "    text = \" \".join(text)\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "a04d8d38",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                         logan paul it's yo big day ‼️‼️‼️\n",
+       "1         i've been following you from the start of your...\n",
+       "2                        say hi to kong and maverick for me\n",
+       "3                                       my fan . attendance\n",
+       "4                                                trending 😉\n",
+       "                                ...                        \n",
+       "691395                                               лучшая\n",
+       "691396    qu'est ce que j'aimerais que tu viennes à roan...\n",
+       "691397                            ven a mexico! 😍 te amo lp\n",
+       "691398                                      islığı yeter...\n",
+       "691399    kocham tą piosenkę😍❤❤❤byłam zakochana po uszy ...\n",
+       "Name: comment_text, Length: 691400, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments['comment_text'].astype(str).apply(clear_text)"
+   ]
   }
  ],
  "metadata": {
