fonz tokenized comments

--- a/notebooks/eda_analysis_fonz.ipynb
+++ b/notebooks/eda_analysis_fonz.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 67,
    "id": "50fdbce5",
    "metadata": {},
    "outputs": [
@@ -10,31 +10,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting translate\n",
-      "  Downloading translate-3.6.1-py2.py3-none-any.whl.metadata (7.7 kB)\n",
+      "Requirement already satisfied: translate in c:\\users\\new owner\\anaconda3\\lib\\site-packages (3.6.1)\n",
       "Requirement already satisfied: click in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (8.1.7)\n",
       "Requirement already satisfied: lxml in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (5.2.1)\n",
       "Requirement already satisfied: requests in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (2.32.3)\n",
-      "Collecting libretranslatepy==2.1.1 (from translate)\n",
-      "  Downloading libretranslatepy-2.1.1-py3-none-any.whl.metadata (233 bytes)\n",
+      "Requirement already satisfied: libretranslatepy==2.1.1 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from translate) (2.1.1)\n",
       "Requirement already satisfied: colorama in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from click->translate) (0.4.6)\n",
       "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (3.3.2)\n",
       "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (3.7)\n",
       "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (2.2.3)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\new owner\\anaconda3\\lib\\site-packages (from requests->translate) (2024.12.14)\n",
-      "Downloading translate-3.6.1-py2.py3-none-any.whl (12 kB)\n",
-      "Downloading libretranslatepy-2.1.1-py3-none-any.whl (3.2 kB)\n",
-      "Installing collected packages: libretranslatepy, translate\n",
-      "Successfully installed libretranslatepy-2.1.1 translate-3.6.1\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  WARNING: The script translate-cli.exe is installed in 'c:\\Users\\New Owner\\anaconda3\\Scripts' which is not on PATH.\n",
-      "  Consider adding this directory to PATH or, if you prefer to suppress this warning, use --no-warn-script-location.\n"
      ]
     }
    ],
@@ -44,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "id": "a7d1a7d5",
    "metadata": {},
    "outputs": [],
@@ -55,13 +41,15 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.tokenize import word_tokenize\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
     "from tqdm.auto import tqdm\n",
     "import re"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 69,
    "id": "65b6e618",
    "metadata": {},
    "outputs": [],
@@ -71,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 70,
    "id": "c6cfe80d",
    "metadata": {},
    "outputs": [
@@ -203,7 +191,7 @@
        "9       0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 71,
    "id": "43214c7b",
    "metadata": {},
    "outputs": [],
@@ -224,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 72,
    "id": "a54112b1",
    "metadata": {},
    "outputs": [
@@ -469,7 +457,7 @@
        "9  13.09  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,50 +476,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 80,
    "id": "a77289aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "def clear_text(text):\n",
     "    text = text.lower() # Convert to lowercase\n",
-    "    pattern = r\"[^a-zA-Z0-9\\s]']\"\n",
+    "    pattern = r'[^a-zA-Z0-9\\s]' # Regular expression pattern to match special characters and punctuation \n",
     "    text = re.sub(pattern, \" \", text) # Remove special characters, including punctuation\n",
-    "    text = text.split()\n",
-    "    text = \" \".join(text)\n",
     "    return text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 81,
    "id": "a04d8d38",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                         logan paul it's yo big day ‼️‼️‼️\n",
-       "1         i've been following you from the start of your...\n",
-       "2                        say hi to kong and maverick for me\n",
-       "3                                       my fan . attendance\n",
-       "4                                                trending 😉\n",
-       "                                ...                        \n",
-       "691395                                               лучшая\n",
-       "691396    qu'est ce que j'aimerais que tu viennes à roan...\n",
-       "691397                            ven a mexico! 😍 te amo lp\n",
-       "691398                                      islığı yeter...\n",
-       "691399    kocham tą piosenkę😍❤❤❤byłam zakochana po uszy ...\n",
-       "Name: comment_text, Length: 691400, dtype: object"
+       "0                          logan paul it s yo big day \n",
+       "1    i ve been following you from the start of your...\n",
+       "2                   say hi to kong and maverick for me\n",
+       "3                                    my fan attendance\n",
+       "4                                            trending \n",
+       "5                                 on trending ayyeeeee\n",
+       "6                                      the end though \n",
+       "7                                            trending \n",
+       "8                          happy one year vlogaversary\n",
+       "9    you and your shit brother may have single hand...\n",
+       "Name: comment_text, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "comments['comment_text'].astype(str).apply(clear_text)"
+    "comments['comment_text'] = comments['comment_text'].astype(str).apply(clear_text)\n",
+    "comments['comment_text'].head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "14294e8c",
+   "metadata": {},
+   "source": [
+    "## Tokenization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "10d8353c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt_tab to C:\\Users\\New\n",
+      "[nltk_data]     Owner\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('punkt_tab')\n",
+    "\n",
+    "comments['tokenized_text'] = comments['comment_text'].fillna(\"\").astype(str).apply(word_tokenize) # Apply tokenization to the 'comment_text' column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "f0d4b249",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                   [logan, paul, it, s, yo, big, day]\n",
+       "1    [i, ve, been, following, you, from, the, start...\n",
+       "2          [say, hi, to, kong, and, maverick, for, me]\n",
+       "3                                [my, fan, attendance]\n",
+       "4                                           [trending]\n",
+       "5                             [on, trending, ayyeeeee]\n",
+       "6                                   [the, end, though]\n",
+       "7                                           [trending]\n",
+       "8                     [happy, one, year, vlogaversary]\n",
+       "9    [you, and, your, shit, brother, may, have, sin...\n",
+       "Name: tokenized_text, dtype: object"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments['tokenized_text'].head(10)"
    ]
   }
  ],
