--- a/notebooks/eda_analysis_fonz.ipynb
+++ b/notebooks/eda_analysis_fonz.ipynb
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "id": "10d8353c",
    "metadata": {},
    "outputs": [
@@ -547,7 +547,8 @@
    "source": [
     "nltk.download('punkt_tab')\n",
     "\n",
-    "comments['tokenized_text'] = comments['comment_text'].fillna(\"\").astype(str).apply(word_tokenize) # Apply tokenization to the 'comment_text' column\n"
+    "comments['tokenized_text'] = comments['comment_text'].fillna(\"\").astype(str).apply(word_tokenize) # Apply tokenization to the 'comment_text' column\n",
+    "comments['tokenized_text'].joi\n"
    ]
   },
   {
@@ -580,6 +581,78 @@
    "source": [
     "comments['tokenized_text'].head(10)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be17d7b8",
+   "metadata": {},
+   "source": [
+    "## Stop Words Removal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ffdf7809",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to C:\\Users\\New\n",
+      "[nltk_data]     Owner\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('stopwords')\n",
+    "\n",
+    "stop_words = set(stopwords.words('english'))\n",
+    "\n",
+    "for comment in comments['tokenized_text']:\n",
+    "    comment = [word for word in comment if word not in stop_words] # Remove stop words from the tokenized text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "ae4bf6f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                   [logan, paul, it, s, yo, big, day]\n",
+       "1    [i, ve, been, following, you, from, the, start...\n",
+       "2          [say, hi, to, kong, and, maverick, for, me]\n",
+       "3                                [my, fan, attendance]\n",
+       "4                                           [trending]\n",
+       "5                             [on, trending, ayyeeeee]\n",
+       "6                                   [the, end, though]\n",
+       "7                                           [trending]\n",
+       "8                     [happy, one, year, vlogaversary]\n",
+       "9    [you, and, your, shit, brother, may, have, sin...\n",
+       "Name: tokenized_text, dtype: object"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments['tokenized_text'].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6640d684",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
