fonz stemmed and lemmatized text

--- a/notebooks/eda_analysis_fonz.ipynb
+++ b/notebooks/eda_analysis_fonz.ipynb
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "ffdf7809",
    "metadata": {},
    "outputs": [
@@ -647,12 +647,80 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6640d684",
+   "cell_type": "markdown",
+   "id": "8b737ba1",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Stemming and Lemmetization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "104e1f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to C:\\Users\\New\n",
+      "[nltk_data]     Owner\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('wordnet')\n",
+    "\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "for comment in comments['tokenized_text']:\n",
+    "    comment = [lemmatizer.lemmatize(word) for word in comment] # Apply lemmatization to the tokenized text\n",
+    "    comment = [stemmer.stem(word) for word in comment] # Apply stemming to the tokenized text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ab54e9b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                    [logan, paul, it, s, yo, big, day]\n",
+       "1     [i, ve, been, following, you, from, the, start...\n",
+       "2           [say, hi, to, kong, and, maverick, for, me]\n",
+       "3                                 [my, fan, attendance]\n",
+       "4                                            [trending]\n",
+       "5                              [on, trending, ayyeeeee]\n",
+       "6                                    [the, end, though]\n",
+       "7                                            [trending]\n",
+       "8                      [happy, one, year, vlogaversary]\n",
+       "9     [you, and, your, shit, brother, may, have, sin...\n",
+       "10       [there, should, be, a, mini, logan, paul, too]\n",
+       "11    [dear, logan, i, really, wan, na, get, your, m...\n",
+       "12    [honestly, evan, is, so, annoying, like, its, ...\n",
+       "13              [casey, is, still, better, then, logan]\n",
+       "14    [aw, geez, rick, this, guy, is, the, face, of,...\n",
+       "15                 [he, happy, cause, he, in, a, movie]\n",
+       "16    [ayyyyoooo, logang, what, up, this, was, a, ha...\n",
+       "17    [bro, y, didnt, u, give, merch, to, johannes, ...\n",
+       "18    [it, s, been, fun, watching, you, grow, i, m, ...\n",
+       "19        [made, a, lot, of, people, hate, youtube, gj]\n",
+       "Name: tokenized_text, dtype: object"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comments['tokenized_text'].head(20)"
+   ]
   }
  ],
  "metadata": {
